tooling/nargo_cli/tests/snapshots/execution_success/fmtstr_with_global/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global FOO: Field = 0x01;

fn main() {
    println(f"foo = {FOO}");
}
